--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,8 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
   color: #f6f1d1;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  gap: 1rem;
   margin-bottom: 0.5rem;
   padding: 1rem 3rem;
 }
