--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,45 +11,101 @@ body {
 }
 
 .todo-list {
-  background-color: #032835;
-  font-family: 'Space Mono', monospace;
-  border-radius: 1rem;
+  background-color: #0B2027;
+  font-family: "Space Mono", monospace;
   padding: 1rem;
-  max-width: 80vw;
-  min-height: 500px;
+  min-width: 400px;
+  min-height: 300px;
 }
 
 .title {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(246, 241, 209, 0.5);
   font-size: 1.5rem;
-  font-family: 'BioRhyme', serif;
-  color: #f6f1d1;
+  font-family: "BioRhyme", serif;
+  color: #F6F1D1;
 }
 
 .form {
   display: flex;
   justify-content: center;
 }
+
 .form-input,
 .form-button {
   border-radius: 0;
   padding: 0.75rem;
   font-size: 0.75rem;
 }
+
 .form-input {
   outline: none;
-  background-color: #f6f1d1;
+  background-color: #F6F1D1;
+  border-color: rgba(255, 255, 255, 0.1);
+}
+
+.form-button {
+  border: 1px;
+  background: #F6F1D1;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-left: 0.25rem;
+}
+
+.form-button:hover {
+  color: #F6F1D1;
+  background: rgba(246, 241, 209, 0.1);
+}
+
+body {
+  margin: 0;
+}
+
+.app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  min-height: 100vh;
+}
+
+.todo-list {
+  background-color: #0B2027;
+  font-family: "Space Mono", monospace;
+  padding: 1rem;
+  min-width: 400px;
+  min-height: 300px;
+}
+
+.title {
+  border-bottom: 1px solid rgba(246, 241, 209, 0.5);
+  font-size: 1.5rem;
+  font-family: "BioRhyme", serif;
+  color: #F6F1D1;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+}
+.form-input, .form-button {
+  border-radius: 0;
+  padding: 0.75rem;
+  font-size: 0.75rem;
+}
+.form-input {
+  outline: none;
+  background-color: #F6F1D1;
   border-color: rgba(255, 255, 255, 0.1);
 }
 .form-button {
   border: 1px;
-  background: #f6f1d1;
+  background: #F6F1D1;
   text-transform: uppercase;
   cursor: pointer;
   margin-left: 0.25rem;
 }
 .form-button:hover {
-  color: #f6f1d1;
+  color: #F6F1D1;
   background: rgba(246, 241, 209, 0.1);
 }
 
@@ -61,17 +117,15 @@ body {
 
 .task {
   background-color: rgba(255, 255, 255, 0.1);
-  color: #f6f1d1;
+  color: #F6F1D1;
   display: flex;
-  justify-content: flex-end;
-  gap: 1rem;
+  justify-content: space-between;
   margin-bottom: 0.5rem;
   padding: 1rem 3rem;
 }
 
-.check-button,
-.delete-button {
-  background-color: #f6f1d1;
+.check-button, .delete-button {
+  background-color: #F6F1D1;
   border: none;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   outline: none;
@@ -80,8 +134,8 @@ body {
 }
 
 .task.done .check-button {
-  background-color: #46494c;
-  color: #f6f1d1;
+  background-color: #46494C;
+  color: #F6F1D1;
 }
 
 .check-icon {
@@ -94,13 +148,23 @@ body {
 }
 
 .task.done .check-icon {
-  background-color: #0b2027;
+  background-color: #0B2027;
 }
 
 .content {
   margin: 0;
 }
 
+.content-data { 
+  color: #F6F1D1;
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 0.5rem;
+  padding: 1rem 3rem;
+}
+
 .task.done .content {
   text-decoration: line-through;
 }
+
+/*# sourceMappingURL=style.css.map */
